Fixed navbar overlap with main content, fixed scroll allowance

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,6 @@ body {
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  overflow: hidden;
   height: 100vh;
 }
 
@@ -91,6 +90,7 @@ body {
   flex-direction: column;
   align-items: flex-start;
   flex-shrink: 0;
+  margin-right: 100px;
 }
 
 .desktop-nav-bar-hidden > .nav-bar-texts {
